--- a/run/V1/index.html
+++ b/run/V1/index.html
@@ -37,6 +37,6 @@
     
     <p>Ce jeu Web Run est un défi amusant et interactif. Vous pouvez y jouez dès maintenant en cliquant sur le lien ci dessous !</p>
     
-    <a href="run.html" download class="download-link" >Jouez aux jeu !</a>
+    <a href="run.html" class="download-link" >Jouez aux jeu !</a>
 </body>
 </html>
