--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
     <ul>
         <li><a href="run\V1\index.html">Jouer au jeu web</a></li>
-        <li><a href="roulette_russe\roulette_russe.html" download>Télécharger le jeu Python</a></li>
+        <li><a href="roulette_russe\roulette_russe.html">Télécharger le jeu Python</a></li>
     </ul>
 </body>
 </html>
