--- a/roulette_russe/roulette_russe.html
+++ b/roulette_russe/roulette_russe.html
@@ -37,6 +37,6 @@
     
     <p>Ce jeu Python est un défi amusant et interactif. Vous pouvez télécharger le fichier pour l'essayer chez vous !</p>
     
-    <a href="roulette_russe.zip" download class="download-link">Télécharger le jeu Python</a>
+    <a href="roulette_russe.py" download class="download-link">Télécharger le jeu Python</a>
 </body>
 </html>
